# qt

./: README.md
qt5-1-0/: CMakeLists.txt
qt5-1-0/src/: MainWindow.cpp  MainWindow.h  main.cpp
qt5-1-1/: CMakeLists.txt
qt5-1-1/data/: resource.rc.in
qt5-1-1/src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
qt5-1-2/: CMakeLists.txt
qt5-1-2/src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
qt5-1-2/translations/: es.ts  fr.ts
qt5-1-3/: CMakeLists.txt
qt5-1-3/src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
qt5-1-3/translations/: CMakeLists.txt  fr.ts
qt5-1-4/: CMakeLists.txt
qt5-1-4/data/: CMakeLists.txt  resource.qrc  resources.qrc
qt5-1-4/src/: MainWindow.cpp  main.cpp
qt5-1-4/translations/: CMakeLists.txt  es.ts  ru.ts
qt5-1-5/: CMakeLists.txt
qt5-1-5/data/: CMakeLists.txt  MainWindowUI.ui
qt5-1-5/scripts/: CMakeLists.txt
qt5-1-5/src/: MainWindow.cpp  MainWindow.h  main.cpp
qt5-1-5/translations/: CMakeLists.txt  es.ts  fr.ts  ru.ts
qt5-1-6/: MyWindow.cpp  MyWindow.h  main.cpp  qt5-1-6.pro  resource_nix.qrc  resource_win.qrc  resources.qrc
qt5-1-7/: qt5-1-7.pro
qt5-1-7/data/: MainWindowUI.ui  resource_nix.qrc  resource_win.qrc
qt5-1-7/src/: MyWindow.cpp  MyWindow.h  main.cpp
qt5-1-8/: qt5-1-8.pro
qt5-1-8/data/: resource_win.qrc  resources.qrc
qt5-1-8/src/: MyTranslatorClass.cpp  MyTranslatorClass.h  MyWindow.cpp  MyWindow.h  main.cpp
qt5-1-8/translations/: de.ts  es.ts  fr.ts
qt5-1-9/: CMakeLists.txt
qt5-1-9/data/: CMakeLists.txt  MainWindowUI.ui  resource.rc.in  resource_nix.qrc
qt5-1-9/scripts/: CMakeLists.txt  gen_translations_qrc.py
qt5-1-9/src/: CMakeLists.txt  MyTranslatorClass.cpp  MyTranslatorClass.h  MyWindow.cpp  main.cpp
qt5-1-9/translations/: CMakeLists.txt  de.ts  es.ts  fr.ts
qt5-2-0/: meson.build
qt5-2-0/data/: FormUI.ui  meson.build  resource.rc.in  unix_resource.qrc
qt5-2-0/scripts/: gen_langs_qrc.py  gen_ts_files.py  meson.build
qt5-2-0/src/: MainWindow.cpp  MainWindow.h  MyTranslator.cpp  MyTranslator.h  main.cpp  meson.build
qt5-2-0/translations/: TRANSLATIONS  es.ts  meson.build  pr.ts
qt5-3-0/: CMakeLists.txt  meson.build
qt5-3-0/data/: CMakeLists.txt  meson.build
qt5-3-0/data/unix/: CMakeLists.txt
qt5-3-0/data/win/: CMakeLists.txt  meson.build
qt5-3-0/src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp  meson.build
qt5-3-0/translations/: CMakeLists.txt  TRANSLATIONS  es.ts  meson.build
qt5-3-1/: meson.build
qt5-3-1/data/: all.qrc  meson.build
qt5-3-1/data/unix/: desktop.py  meson.build  unix_resource.qrc
qt5-3-1/data/win/: meson.build
qt5-3-1/src/: MyTranslator.cpp
qt5-3-1/translations/: es.po  it.po  meson.build
qt5-3-2/: meson.build
qt5-3-2/data/: FormUI.ui  meson.build
qt5-3-2/data/unix/: meson.build
qt5-3-2/data/win/: meson.build
qt5-3-2/scripts/: desktop.py  meson.build  touch.py
qt5-3-2/src/: MyTranslator.h  meson.build
qt5-3-2/translations/: POTFILES  es.po  it.po  meson.build  qt.pot
qt5-3-3/: meson.build  meson.options
qt5-3-3/data/: FormUI.ui  all.qrc  meson.build
qt5-3-3/data/win/: meson.build  resource.rc.in
qt5-3-3/scripts/: desktop.py  meson.build  pofiles.py  touch.py
qt5-3-3/src/: MainWindow.cpp  MainWindow.h  MesonHelper.cpp.in  MesonHelper.h  MesonHelper.h.in  meson.build
qt5-3-3/translations/: es.po  es.ts  fr.po  it.po  it.ts  meson.build  pr.po
qt5-4-0/: meson.build  meson.options
qt5-4-0/data/: FormUI.ui  meson.build
qt5-4-0/scripts/: gen_qrc.py  meson.build
qt5-4-0/src/: MainWindow.cpp  MesonHelper.h.in  main.cpp  meson.build
qt5-4-0/translations/: es.ts  fr.ts  meson.build
qt5-5-0/: meson.build
qt5-5-0/data/: all.qrc  meson.build
qt5-5-0/src/: MainWindow.cpp  MainWindow.h  MesonHelper.h.in  main.cpp  meson.build
qt5-5-0/translations/: POTFILES  es.po  es.ts  linguas.qrc.in  meson.build  pr.po  pr.ts  qt5-5-0.pot
